@@ -29,8 +29,8 @@ appropriate
 </ul>
 
 
-Our entry point is in <tt>main()</tt> (<tt>lily/main.cc</tt>). Good
-luck. 
+Our entry point is in <tt>main()</tt> (<tt>lily/main.cc</tt>). Grep
+the source code for TODO for inspiration.  Good luck.
 
 <h2>&ldquo;But I am not brilliant!&rdquo</h2>
 
@@ -54,14 +54,6 @@ example, you could
 <li>
  help entering music for the <a
  href=http://www.mutopiaproject.org/>Mutopia project</a>.
-
-<li>
- pick out something from our TODO list. Read it by
- running
- <pre>
-   grep TODO `find`
- </pre>
- on the source archive.
 
 <li>
  jazz up our website. It is available from CVS: run
