@@ -74,6 +74,23 @@
     <td>1.8.0</td>  
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
+  
+  <tr>
+<td><p align=center><img src=@IMAGES@redhat-logo.png></td>
+    <td>
+      RedHat/i386 
+    </td>
+    <td>
+      8, 9
+    </td>
+    <td>
+      <b>Go to <a
+		  href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+	  Planet CCRMA</a></b>
+    </td>
+    <td>1.6.11</td>
+    <td>PlanetCCRMA</td>
+  </tr>
     
   <tr>
   <td><p align=center><img src="@IMAGES@windows.png"></td>
@@ -202,23 +219,6 @@ The 1.7 series are development releases; use 1.8 if available.
     </td>
     <td>1.6.9</td>
     <td>Laura Conrad</td>
-  </tr>
-  
-  <tr>
-<td><p align=center><img src=@IMAGES@redhat-logo.png></td>
-    <td>
-      RedHat/i386 
-    </td>
-    <td>
-      7.2, 7.3, 8, 9
-    </td>
-    <td>
-      <b>Go to <a
-		  href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-	  Planet CCRMA</a></b>
-    </td>
-    <td>1.6.11</td>
-    <td>PlanetCCRMA</td>
   </tr>
   
   
