@@ -24,13 +24,13 @@ Computer printouts of sheet music usually look dull.  LilyPond is
 different: it can make beautiful sheet music.  Use it for your music
 too!
 
-<p align=right><a href=switch/>More about LilyPond...</a></p>
+<p align=right><a href=switch/>More about LilyPond... </a></p>
 </td>
 <td width="50%">
 <p>
 
 
-<h2>Miss Manners<br> of Music Printing</h2>
+<h2>Ms. Manners<br> of Music Printing</h2>
 <p>
 
 What sets LilyPond apart from other programs?  Why did we revive the
